Fix styling to work on smaller screens

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 body {
     background-color: #202C39;
     font-family: 'Roboto', sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 body p {
@@ -11,7 +14,6 @@ body p {
 
 .game-window {
     display: flex;
-    width: 100vw;
     margin-top: 5em;
     justify-content: center;
     align-items: center;
@@ -26,8 +28,9 @@ body p {
 }
 
 .game-outcome {
-    min-height: 4em;
+    max-height: 4em;
     font-size: 4em;
+    margin-top: 2em;
 }
 
 .score > p {
@@ -38,7 +41,8 @@ body p {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 8em;
+    max-height: 8em;
+    margin-top: 2em;
 }
 
 .computer-selection > p {
